Replace ImmutableMap.of with Map.of