@@ -15,40 +15,25 @@
  */
 package com.proofpoint.configuration;
 
-import com.fasterxml.jackson.core.JsonFactory;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Sets;
 import com.google.inject.spi.Message;
 import com.proofpoint.configuration.Problems.Monitor;
 
 import javax.annotation.Nullable;
-import java.io.FileInputStream;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.Reader;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Properties;
 import java.util.Set;
-
-import static java.lang.String.format;
 
 public final class ConfigurationFactoryBuilder
 {
     private PropertiesBuilder propertiesBuilder = new PropertiesBuilder();
     private final Set<String> expectToUse = new HashSet<>();
     private Monitor monitor = Problems.NULL_MONITOR;
-    private Map<String,String> applicationDefaults = ImmutableMap.of();
-    private Map<String,String> moduleDefaults = ImmutableMap.of();
-    private Map<String, ConfigurationDefaultingModule> moduleDefaultSource = ImmutableMap.of();
+    private Map<String,String> applicationDefaults = Map.of();
+    private Map<String,String> moduleDefaults = Map.of();
+    private Map<String, ConfigurationDefaultingModule> moduleDefaultSource = Map.of();
 
     /**
      * Loads properties from the given file
