@@ -15,7 +15,6 @@
  */
 package com.proofpoint.discovery.client;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.io.Resources;
 import com.proofpoint.discovery.client.ServiceDescriptor.ServiceDescriptorBuilder;
 import com.proofpoint.json.JsonCodec;
@@ -47,7 +46,7 @@ public class TestServiceDescriptor
                 "type",
                 "pool",
                 "location",
-                ServiceState.RUNNING, ImmutableMap.of("a", "apple", "b", "banana"));
+                ServiceState.RUNNING, Map.of("a", "apple", "b", "banana"));
 
         String json = Resources.toString(getResource("service-descriptor.json"), UTF_8);
         ServiceDescriptor actual = serviceDescriptorCodec.fromJson(json);
@@ -63,7 +62,7 @@ public class TestServiceDescriptor
                 "type",
                 "pool",
                 "location",
-                ServiceState.RUNNING, ImmutableMap.of("a", "apple", "b", "banana")));
+                ServiceState.RUNNING, Map.of("a", "apple", "b", "banana")));
     }
 
     @Test
@@ -73,22 +72,22 @@ public class TestServiceDescriptor
         UUID serviceB = UUID.randomUUID();
         equivalenceTester()
                 .addEquivalentGroup(
-                        new ServiceDescriptor(serviceA, "node", "type", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceA, "node-X", "type", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceA, "node", "type-X", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceA, "node", "type", "pool-X", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceA, "node", "type", "pool", "location-X", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceA, "node", "type", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a-X", "apple")),
-                        new ServiceDescriptor(serviceA, "node", "type", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple-X"))
+                        new ServiceDescriptor(serviceA, "node", "type", "pool", "location", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceA, "node-X", "type", "pool", "location", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceA, "node", "type-X", "pool", "location", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceA, "node", "type", "pool-X", "location", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceA, "node", "type", "pool", "location-X", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceA, "node", "type", "pool", "location", ServiceState.RUNNING, Map.of("a-X", "apple")),
+                        new ServiceDescriptor(serviceA, "node", "type", "pool", "location", ServiceState.RUNNING, Map.of("a", "apple-X"))
                 )
                 .addEquivalentGroup(
-                        new ServiceDescriptor(serviceB, "node", "type", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceB, "node-X", "type", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceB, "node", "type-X", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceB, "node", "type", "pool-X", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceB, "node", "type", "pool", "location-X", ServiceState.RUNNING, ImmutableMap.of("a", "apple")),
-                        new ServiceDescriptor(serviceB, "node", "type", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a-X", "apple")),
-                        new ServiceDescriptor(serviceB, "node", "type", "pool", "location", ServiceState.RUNNING, ImmutableMap.of("a", "apple-X"))
+                        new ServiceDescriptor(serviceB, "node", "type", "pool", "location", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceB, "node-X", "type", "pool", "location", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceB, "node", "type-X", "pool", "location", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceB, "node", "type", "pool-X", "location", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceB, "node", "type", "pool", "location-X", ServiceState.RUNNING, Map.of("a", "apple")),
+                        new ServiceDescriptor(serviceB, "node", "type", "pool", "location", ServiceState.RUNNING, Map.of("a-X", "apple")),
+                        new ServiceDescriptor(serviceB, "node", "type", "pool", "location", ServiceState.RUNNING, Map.of("a", "apple-X"))
                 )
                 .check();
     }
@@ -103,7 +102,7 @@ public class TestServiceDescriptor
                 "pool",
                 "location",
                 ServiceState.RUNNING,
-                ImmutableMap.of("a", "apple", "b", "banana"));
+                Map.of("a", "apple", "b", "banana"));
 
         ServiceDescriptorBuilder builder = serviceDescriptor(expected.getType())
                 .setId(expected.getId())
@@ -131,7 +130,7 @@ public class TestServiceDescriptor
                 nodeInfo.getPool(),
                 "location",
                 ServiceState.STOPPED,
-                ImmutableMap.of("a", "apple", "b", "banana"));
+                Map.of("a", "apple", "b", "banana"));
 
         ServiceDescriptor actual = serviceDescriptor(expected.getType())
                 .setId(expected.getId())
