@@ -3,7 +3,6 @@ package com.proofpoint.http.client;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.exc.InvalidFormatException;
 import com.fasterxml.jackson.dataformat.smile.SmileFactory;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.net.MediaType;
 import com.proofpoint.json.JsonCodec;
 import org.testng.annotations.BeforeMethod;
@@ -13,6 +12,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.UncheckedIOException;
+import java.util.Map;
 
 import static com.google.common.net.MediaType.JSON_UTF_8;
 import static com.google.common.net.MediaType.PLAIN_TEXT_UTF_8;
@@ -49,7 +49,7 @@ TestSmileResponseHandler
     @Test
     public void testValidSmile()
     {
-        User response = handler.handle(null, createSmileResponse(OK, ImmutableMap.of(
+        User response = handler.handle(null, createSmileResponse(OK, Map.of(
                 "name", "Joe",
                 "age", 25,
                 "extra", true
@@ -63,7 +63,7 @@ TestSmileResponseHandler
     public void testInvalidSmile()
     {
         try {
-            handler.handle(null, createSmileResponse(OK, ImmutableMap.of(
+            handler.handle(null, createSmileResponse(OK, Map.of(
                     "age", "foo"
             )));
         }
